<resources>
    <string name="app_name">Random Contact</string>
    <string name="app_version">Version 4.0.0 (Nova)</string>
    <string name="app_release_date">Mar 2021</string>
    <string name="app_desc">This app displays a "Random Contact" from your contacts list. Contact an old friend today!</string>
    <string name="app_disclaimer">This is an open source project designed and developed in my free time. \nAll the contact data shown are retrieved from the device and not processed, stored or shared by the app.</string>
    <string name="app_developer_info">Designed and developed by ae app labs</string>

    <string name="empty_text">Empty Text</string>
    <string name="empty_count">0</string>
    <string name="empty_set">This contact does not have any phone numbers.</string>

    <string name="github_source_url" translatable="false">https://github.com/midhunhk/random-contact</string>
    <string name="privacy_policy_url" translatable="false">https://ae-app-labs.github.io/privacy-policy/random-contact</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_manage">Manage</string>
    <string name="action_random">Random Contact</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_prev">Previous</string>
    <string name="action_about">About</string>
    <string name="action_call">Call</string>
    <string name="action_whatsapp_message">WhatsApp</string>
    <string name="action_license">View License</string>
    <string name="action_source">View Source</string>
    <string name="action_message">Text</string>
    <string name="action_view_contact">View in Address Book</string>

    <string name="str_times_contacted">Times Contacted</string>
    <string name="str_contact_count">0</string>
    <string name="str_empty_contact_list">Contacts list is empty</string>
    <string name="str_last_contacted_on">Last contacted</string>
    <string name="str_contact_now">Contact Now</string>
    <string name="str_top_contacted">Top frequently contacted</string>

    <string name="str_license">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n\n
Copyright 2019 Dionysios Karatzas\n\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n
   http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.
    </string>

    <string name="str_all_contacts">All Contacts</string>
    <string name="str_create_group">Create Group</string>
    <string name="str_group_name">Contact Group Name</string>
    <string name="str_contact_group_add">Create</string>
    <string name="str_contact_group_update">Update</string>
    <string name="str_group_members">Group Members</string>
    <string name="str_members">Members</string>
    <string name="str_contact_group_select_members">Select</string>
    <string name="str_contact_group_add_member">Add</string>
    <string name="str_contact_group_title">Manage Groups</string>
    <string name="str_contact_group_name">Enter Group Name</string>
    <string name="str_contact_group_create_title">Create Group</string>
    <string name="str_contact_group_edit_title">Edit Group</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_select_contact_group">Select a group to generate Random Contacts from, or create a new contact group.</string>
    <string name="str_empty_list_groups">No Custom Groups created so far.</string>
    <string name="str_empty_list_create">Create a new group with this button.</string>
    <string name="str_empty_list_members">Select members to be part of this group.</string>
    <string name="str_contact_group_delete_title">Delete this Contact Group?</string>
    <string name="str_dialog_delete">Delete</string>
    <string name="str_dialog_cancel">Cancel</string>
    <string name="str_dialog_ok">OK</string>
    <string name="str_multi_contact_title">Select Contacts</string>
    <string name="str_multi_contact_continue">Continue</string>
    <string name="str_multi_contact_validation">Please select at least one contact</string>
    <string name="str_multi_contact_no_contacts">No Contacts to display</string>
    <string name="str_bottom_message_title">Major Update</string>

    <string name="str_bottom_message_content">
        <li>Version 4.0 (Nova)</li>\n
        <li>Completely redesigned from the ground up</li>\n
        <li>Edit groups feature added</li>\n
        <li>Improved performance and stability</li>\n
        <li>Removed Contacted details as they were made obsolete by Google</li>\n
        <li>Thank you for your support</li>
    </string>

    <string name="str_permission_required_title">Permission Required</string>
    <string name="str_permission_required_desc">Random Contact requires the permission to read contacts to function as designed.</string>
    <string name="str_btn_provide_access">Provide Access</string>
    <string name="str_in_app_update_error">An error occurred during In-App Update</string>
</resources>