<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".fragments.AboutFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="@dimen/unit_m"
        app:cardElevation="2dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/unit_m">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/unit_m">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_margin="4dip"
                android:contentDescription="@string/empty_text"
                android:padding="@dimen/unit_s"
                android:src="@drawable/ic_app_icon"/>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/unit_s"
                android:text="@string/app_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/unit_s"
                android:text="@string/app_version"/>

            <TextView
                android:id="@+id/appReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appVersion"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/unit_s"
                android:text="@string/app_release_date"
                android:layout_toEndOf="@+id/appIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appReleaseDate"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/unit_s"
                android:text="@string/app_developer_info"
                android:layout_toEndOf="@+id/appIcon" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/unit_m"
        android:text="@string/app_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/unit_m"
        android:text="@string/app_disclaimer"/>

    <Button
        android:id="@+id/viewSourceCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?attr/colorOnSurface"
        android:drawablePadding="@dimen/unit_m"
        app:icon="@drawable/icon_github"
        app:iconTint="?attr/colorOnSurface"
        android:gravity="center_vertical"
        android:padding="@dimen/unit_s"
        android:text="@string/github_source_visible_url"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/viewLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/unit_m"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:icon="@drawable/icon_text"
        app:iconTint="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center_vertical"
        android:padding="@dimen/unit_s"
        android:text="@string/action_license"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/viewPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/unit_m"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:icon="@drawable/icon_text"
        app:iconTint="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center_vertical"
        android:padding="@dimen/unit_s"
        android:text="@string/str_privacy_policy"
        android:textAllCaps="false"/>

</LinearLayout>