<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/unit_l">

    <TextView
        android:id="@+id/txtMessageTitle"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_bottom_message_title"
        android:textAllCaps="true"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMessageBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/unit_l"
        android:text="@string/str_bottom_message_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessageTitle" />

    <Button
        android:id="@+id/btnMessageClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_dialog_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessageBody" />

</androidx.constraintlayout.widget.ConstraintLayout>