<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/unit_s"
        android:ellipsize="marquee"
        android:text="@string/empty_text"
        android:gravity="center_vertical"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/txtPhoneType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtContactNumber"
        android:gravity="center_vertical"
        android:padding="@dimen/unit_s"
        android:text="@string/empty_text"
        android:textColor="@color/color_grey_light"
        android:textStyle="italic"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/btnWhatsAppMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@+id/btnCall"
        android:layout_toStartOf="@id/btnCall"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/empty_text"
        android:padding="5dp"
        android:src="@drawable/ic_whatsapp"
        android:text="@string/action_whatsapp_message"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@+id/btnText"
        android:layout_toStartOf="@id/btnText"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/empty_text"
        android:padding="5dp"
        android:src="@drawable/ic_phone"
        android:text="@string/action_call"/>

    <ImageButton
        android:id="@+id/btnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?android:selectableItemBackground"
        android:layout_margin="3dp"
        android:contentDescription="@string/empty_text"
        android:padding="5dp"
        android:src="@drawable/ic_message"
        android:text="@string/action_message"/>

</RelativeLayout>