<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".fragments.ManageGroupsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/unit_l"
        android:paddingLeft="@dimen/unit_l"
        android:paddingEnd="@dimen/unit_l"
        android:paddingRight="@dimen/unit_l"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/str_contact_group_title"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/empty_text" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/unit_l"
        android:paddingLeft="@dimen/unit_l"
        android:paddingEnd="@dimen/unit_l"
        android:paddingRight="@dimen/unit_l"
        android:text="@string/str_select_contact_group"/>

    <LinearLayout
        android:id="@+id/allContactsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioAllContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_all_contacts"
            android:textAllCaps="true"
            android:textSize="18sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/contactGroupListContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ae.apps.lib.custom.views.EmptyRecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:listitem="@layout/contact_group_item"
            app:layoutManager="LinearLayoutManager"/>

        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit_m"
            android:paddingTop="@dimen/unit_l"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/unit_xl"
                android:drawablePadding="@dimen/unit_m"
                android:gravity="center"
                android:text="@string/str_empty_list_groups"/>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>