<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NoAccessFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimarySurface"
        app:cardCornerRadius="@dimen/unit_m"
        app:cardElevation="2dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/unit_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtNoAccessTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit_m"
                    android:gravity="center"
                    android:text="@string/str_permission_required_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintBottom_toTopOf="@+id/txtNoAccessText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/txtNoAccessText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit_m"
                    android:gravity="center"
                    android:padding="@dimen/unit_s"
                    android:text="@string/str_permission_required_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="@+id/btnRequestPermissions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtNoAccessTitle" />

                <Button
                    android:id="@+id/btnRequestPermissions"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit_m"
                    android:text="@string/str_btn_provide_access"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNoAccessText" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>